--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <% if @user.avatar? %>
+    <%= cl_image_tag(@user.avatar.path, { size: '250x250', crop: :thumb, gravity: :face  }) %>
+  <% end %>
   <strong>Name:</strong>
   <%= @user.name %>
+</p>
+<p>
+  <% @user.photos.each do |photo| %>
+    <%= cl_image_tag(photo.path, { height: 125, width: 125, crop: :fit }) %>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
