--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>CloudinaryImageUploaderExample</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-  <%= cloudinary_js_config %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <title>CloudinaryImageUploaderExample</title>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+    <%= csrf_meta_tags %>
+    <%= cloudinary_js_config %>
+  </head>
+  <body>
+    <div class='navbar navbar-inverse navbar-fixed-top' role='navigation'>
+      <div class='container'>
+        <div class='navbar-header'>
+          <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
+            <span class='sr-only'>Toggle navigation</span>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+          </button>
+          <%= link_to 'CloudinaryImageUploaderExample', root_path, class: 'navbar-brand' %>
+        </div>
+        <div class='navbar-collapse collapse'>
+          <ul class='nav navbar-nav pull-right'>
+            <li class='active'>
+              <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class='container main'>
+      <%= yield %>
+    </div>
+  </body>
 </html>
