--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,8 @@
   padding-top: 25px;
 }
 
-.user-photos-list {
+.user-photos-list,
+.photo-list {
   margin: 20px 0;
   padding: 0;
   list-style: none;
@@ -34,7 +35,8 @@
   overflow: hidden;
 }
 
-.user-photo-item {
+.user-photo-item,
+.photo-item {
   float: left;
   margin-right: 25px;
   margin-bottom: 25px;
